--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 		"lint": "prettier --check . && eslint .",
 		"db:push": "drizzle-kit push",
 		"db:migrate": "drizzle-kit migrate",
+		"db:check": "drizzle-kit check",
 		"db:studio": "drizzle-kit studio",
 		"db:generate": "drizzle-kit generate"
 	},
@@ -40,9 +41,13 @@
 	},
 	"dependencies": {
 		"@libsql/client": "^0.14.0",
+		"@paralleldrive/cuid2": "^2.2.2",
 		"@tailwindcss/container-queries": "^0.1.1",
 		"@tailwindcss/forms": "^0.5.9",
 		"@tailwindcss/typography": "^0.5.15",
-		"drizzle-orm": "^0.38.2"
+		"@typescript-eslint/eslint-plugin": "^8.18.2",
+		"@typescript-eslint/parser": "^8.18.2",
+		"drizzle-orm": "^0.38.2",
+		"eslint-plugin-drizzle": "^0.2.3"
 	}
 }
