--- a/package.json
+++ b/package.json
@@ -42,12 +42,14 @@
 	"dependencies": {
 		"@libsql/client": "^0.14.0",
 		"@paralleldrive/cuid2": "^2.2.2",
+		"@sinclair/typebox": "^0.34.13",
 		"@tailwindcss/container-queries": "^0.1.1",
 		"@tailwindcss/forms": "^0.5.9",
 		"@tailwindcss/typography": "^0.5.15",
 		"@typescript-eslint/eslint-plugin": "^8.18.2",
 		"@typescript-eslint/parser": "^8.18.2",
 		"drizzle-orm": "^0.38.2",
+		"drizzle-typebox": "^0.2.0",
 		"eslint-plugin-drizzle": "^0.2.3"
 	}
 }
