--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
 		"@sveltejs/vite-plugin-svelte": "^5.0.3",
 		"@types/node": "^22.10.2",
 		"autoprefixer": "^10.4.20",
+		"bits-ui": "1.0.0-next.74",
+		"clsx": "^2.1.1",
 		"drizzle-kit": "^0.30.1",
 		"eslint": "^9.17.0",
 		"eslint-config-prettier": "^9.1.0",
@@ -34,7 +36,10 @@
 		"prettier-plugin-tailwindcss": "^0.6.9",
 		"svelte": "^5.15.0",
 		"svelte-check": "^4.1.1",
+		"tailwind-merge": "^2.6.0",
+		"tailwind-variants": "^0.3.0",
 		"tailwindcss": "^3.4.17",
+		"tailwindcss-animate": "^1.0.7",
 		"typescript": "^5.7.2",
 		"typescript-eslint": "^8.18.2",
 		"vite": "^6.0.5"
@@ -46,6 +51,7 @@
 		"@tailwindcss/container-queries": "^0.1.1",
 		"@tailwindcss/forms": "^0.5.9",
 		"@tailwindcss/typography": "^0.5.15",
+		"@tanstack/table-core": "^8.20.5",
 		"@typescript-eslint/eslint-plugin": "^8.18.2",
 		"@typescript-eslint/parser": "^8.18.2",
 		"drizzle-orm": "^0.38.2",
