--- a/package.json
+++ b/package.json
@@ -9,13 +9,18 @@
 		"preview": "vite preview",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
+		"dependencies": "npm-run-all --parallel dependencies:unused dependencies:outdated",
+		"dependencies:outdated": "pnpm dlx npm-check-updates",
+		"dependencies:unused": "pnpm dlx depcheck",
+		"dependencies:update": "pnpm dlx npm-check-updates -u",
 		"format": "prettier --write .",
 		"lint": "prettier --check . && eslint .",
 		"db:push": "drizzle-kit push",
 		"db:migrate": "drizzle-kit migrate",
 		"db:check": "drizzle-kit check",
 		"db:studio": "drizzle-kit studio",
-		"db:generate": "drizzle-kit generate"
+		"db:generate": "drizzle-kit generate",
+		"prepare": "husky"
 	},
 	"devDependencies": {
 		"@eslint/compat": "^1.2.4",
@@ -24,20 +29,25 @@
 		"@sveltejs/vite-plugin-svelte": "^5.0.3",
 		"@types/node": "^22.10.2",
 		"autoprefixer": "^10.4.20",
+		"depcheck": "^1.4.7",
 		"drizzle-kit": "^0.30.1",
 		"eslint": "^9.17.0",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-svelte": "^2.46.1",
 		"globals": "^15.14.0",
+		"husky": "^9.1.7",
+		"lint-staged": "^15.3.0",
+		"npm-check-updates": "^17.1.12",
+		"npm-run-all": "^4.1.5",
 		"prettier": "^3.4.2",
 		"prettier-plugin-svelte": "^3.3.2",
 		"prettier-plugin-tailwindcss": "^0.6.9",
-		"svelte": "^5.15.0",
+		"svelte": "^5.16.0",
 		"svelte-check": "^4.1.1",
 		"tailwindcss": "^3.4.17",
 		"typescript": "^5.7.2",
 		"typescript-eslint": "^8.18.2",
-		"vite": "^6.0.5"
+		"vite": "^6.0.6"
 	},
 	"dependencies": {
 		"@libsql/client": "^0.14.0",
@@ -49,7 +59,7 @@
 		"@typescript-eslint/eslint-plugin": "^8.18.2",
 		"@typescript-eslint/parser": "^8.18.2",
 		"drizzle-orm": "^0.38.3",
-		"drizzle-typebox": "^0.2.0",
+		"drizzle-typebox": "^0.2.1",
 		"eslint-plugin-drizzle": "^0.2.3"
 	}
 }
