--- a/.lintstagedrc
+++ b/.lintstagedrc
@@ -1,3 +1,3 @@
 {
-	"*.{js,ts,svelte,css,scss,postcss,json}": ["pnpm format", "pnpm lint", "pnpm lint"]
+	"*.{js,ts,svelte,css,scss,postcss,json}": ["pnpm format", "pnpm lint"]
 }
