--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 	},
 	"devDependencies": {
 		"@eslint/compat": "^1.2.4",
+		"@sinclair/typebox": "^0.34.13",
 		"@sveltejs/adapter-vercel": "^5.5.2",
 		"@sveltejs/kit": "^2.15.1",
 		"@sveltejs/vite-plugin-svelte": "^5.0.3",
@@ -44,6 +45,7 @@
 		"prettier-plugin-tailwindcss": "^0.6.9",
 		"svelte": "^5.16.0",
 		"svelte-check": "^4.1.1",
+		"sveltekit-superforms": "^2.22.1",
 		"tailwindcss": "^3.4.17",
 		"typescript": "^5.7.2",
 		"typescript-eslint": "^8.18.2",
@@ -52,7 +54,6 @@
 	"dependencies": {
 		"@libsql/client": "^0.14.0",
 		"@paralleldrive/cuid2": "^2.2.2",
-		"@sinclair/typebox": "^0.34.13",
 		"@tailwindcss/container-queries": "^0.1.1",
 		"@tailwindcss/forms": "^0.5.9",
 		"@tailwindcss/typography": "^0.5.15",
