Add user login to the app
Add user login and authentication functionality to the app.

* **Documentation**: Update `docs/MVP_Features.md` to include user stories for user login and authentication.
* **Database Schema**: Add `src/lib/server/db/schema/users.ts` to define the user schema with fields for id, username, password, createdAt, and updatedAt.
* **Database Functions**: Add `src/lib/server/db/users.ts` to create functions for creating and retrieving users, and for user authentication.
* **Login Page**: Add `src/routes/login/+page.svelte` to create a login form with fields for username and password, and form submission logic.
* **Login Server**: Add `src/routes/login/+page.server.ts` to handle form submission, authenticate the user, and set a JWT cookie on successful login.
* **Layout Changes**: Modify `src/routes/+layout.svelte` to add a login link to the navigation bar.
* **Layout Server**: Add `src/routes/+layout.server.ts` to check if the user is logged in and pass user information to the layout component.
* **Environment Variables**: Update `.env.example` to include environment variables for JWT secret and token expiration.

---

For more details, open the [Copilot Workspace session](https://copilot-workspace.githubnext.com/nonameolsson/budgt?shareId=XXXX-XXXX-XXXX-XXXX).

--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,7 @@ DATABASE_URL="libsql://db-name-user.turso.io"
 DATABASE_AUTH_TOKEN=""
 # A local DB can also be used in dev as well
 # DATABASE_URL="file:local.db"
+
+# JWT configuration
+JWT_SECRET="your_jwt_secret"
+JWT_EXPIRATION="1h"
