--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"version": "0.0.1",
 	"type": "module",
 	"scripts": {
-		"dev": "vite dev",
+		"dev": "vite dev | pino-pretty",
 		"build": "vite build",
 		"preview": "vite preview",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
@@ -49,7 +49,7 @@
 		"sveltekit-superforms": "^2.22.1",
 		"tailwindcss": "^3.4.17",
 		"typescript": "^5.7.2",
-		"typescript-eslint": "^8.18.2",
+		"typescript-eslint": "^8.19.0",
 		"vite": "^6.0.6"
 	},
 	"dependencies": {
@@ -58,10 +58,12 @@
 		"@tailwindcss/container-queries": "^0.1.1",
 		"@tailwindcss/forms": "^0.5.9",
 		"@tailwindcss/typography": "^0.5.15",
-		"@typescript-eslint/eslint-plugin": "^8.18.2",
-		"@typescript-eslint/parser": "^8.18.2",
+		"@typescript-eslint/eslint-plugin": "^8.19.0",
+		"@typescript-eslint/parser": "^8.19.0",
 		"drizzle-orm": "^0.38.3",
 		"drizzle-typebox": "^0.2.1",
-		"eslint-plugin-drizzle": "^0.2.3"
+		"eslint-plugin-drizzle": "^0.2.3",
+		"pino": "^9.6.0",
+		"pino-pretty": "^13.0.0"
 	}
 }
