--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"version": "0.0.1",
 	"type": "module",
 	"scripts": {
-		"dev": "vite dev | pino-pretty",
+		"dev": "vite dev",
 		"build": "vite build",
 		"preview": "vite preview",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
@@ -40,6 +40,7 @@
 		"husky": "^9.1.7",
 		"lint-staged": "^15.3.0",
 		"npm-check-updates": "^17.1.13",
+		"pino-pretty": "^13.0.0",
 		"npm-run-all": "^4.1.5",
 		"prettier": "^3.4.2",
 		"prettier-plugin-svelte": "^3.3.2",
@@ -63,7 +64,6 @@
 		"drizzle-orm": "^0.38.3",
 		"drizzle-typebox": "^0.2.1",
 		"eslint-plugin-drizzle": "^0.2.3",
-		"pino": "^9.6.0",
-		"pino-pretty": "^13.0.0"
+		"pino": "^9.6.0"
 	}
 }
