--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
 		"lint-staged": "^15.3.0",
 		"npm-check-updates": "^17.1.13",
 		"npm-run-all": "^4.1.5",
+		"pino-pretty": "^13.0.0",
 		"prettier": "^3.4.2",
 		"prettier-plugin-svelte": "^3.3.2",
 		"prettier-plugin-tailwindcss": "^0.6.9",
@@ -63,7 +64,6 @@
 		"drizzle-orm": "^0.38.3",
 		"drizzle-typebox": "^0.2.1",
 		"eslint-plugin-drizzle": "^0.2.3",
-		"pino": "^9.6.0",
-		"pino-pretty": "^13.0.0"
+		"pino": "^9.6.0"
 	}
 }
