--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
 		"db:check": "drizzle-kit check",
 		"db:studio": "drizzle-kit studio",
 		"db:generate": "drizzle-kit generate",
-		"prepare": "husky"
+		"prepare": "husky",
+		"test": "vitest",
+		"test:watch": "vitest --watch"
 	},
 	"devDependencies": {
 		"@eslint/compat": "^1.2.4",
@@ -51,7 +53,8 @@
 		"tailwindcss": "^3.4.17",
 		"typescript": "^5.7.2",
 		"typescript-eslint": "^8.19.0",
-		"vite": "^6.0.6"
+		"vite": "^6.0.6",
+		"vitest": "^0.32.0"
 	},
 	"dependencies": {
 		"@libsql/client": "^0.14.0",
