Add drizzle seed to the repository
Add drizzle seed functionality to the repository.

* **package.json**
  - Add a new script `"db:seed": "drizzle-kit seed"` to the `scripts` section.

* **src/lib/server/db/seed.ts**
  - Import necessary modules from `drizzle-orm` and `drizzle-typebox`.
  - Define seed data for `accounts`, `categories`, and `expenses` tables.
  - Insert seed data into the database using `db.insert` method.
  - Implement `seedDatabase` function to handle the seeding process and log errors if any.

---

For more details, open the [Copilot Workspace session](https://copilot-workspace.githubnext.com/nonameolsson/budgt?shareId=XXXX-XXXX-XXXX-XXXX).

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 		"db:check": "drizzle-kit check",
 		"db:studio": "drizzle-kit studio",
 		"db:generate": "drizzle-kit generate",
+		"db:seed": "drizzle-kit seed",
 		"prepare": "husky"
 	},
 	"devDependencies": {
