--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
 		"svelte-check": "^4.1.1",
 		"sveltekit-superforms": "^2.22.1",
 		"tailwindcss": "^3.4.17",
+		"tsx": "^4.19.2",
 		"typescript": "^5.7.2",
 		"typescript-eslint": "^8.19.0",
 		"vite": "^6.0.6",
@@ -65,6 +66,7 @@
 		"@typescript-eslint/eslint-plugin": "^8.19.0",
 		"@typescript-eslint/parser": "^8.19.0",
 		"drizzle-orm": "^0.38.3",
+		"drizzle-seed": "^0.2.1",
 		"drizzle-typebox": "^0.2.1",
 		"eslint-plugin-drizzle": "^0.2.3",
 		"pino": "^9.6.0"
